# DRAMSys

./: .gitignore  README.md
apps/traceAnalyzer/: CMakeLists.txt  traceanalyzer.cpp  tracefiletab.cpp  tracefiletab.h  tracefiletab.ui
apps/traceAnalyzer/extension/: plots.h
apps/traceAnalyzer/extension/latency/: latencyanalysis.cpp  latencyanalysis.h  latencymodel.cpp  latencymodel.h  latencyplot.cpp  latencyplot.h  latencyresult.h  latencyworker.cpp  latencyworker.h
apps/traceAnalyzer/extension/metrics/: advancedmetricsui.cpp  advancedmetricsui.h  metricsengine.cpp  metricsengine.h
apps/traceAnalyzer/extension/power/: poweranalysis.cpp  poweranalysis.h  powerplot.cpp  powerplot.h  powerresult.h  powerworker.cpp  powerworker.h
apps/traceAnalyzer/presentation/: tracePlotMouseLabel.cpp  traceplot.cpp  traceplot.h
apps/traceAnalyzer/tests/: metricstests.cpp
configs/: ddr4_power_test.json
